# llm-utils

./: .gitignore  Cargo.toml  README.md  TODO.md  llm_pricing.json
docs-to-knowledge/: Cargo.toml
docs-to-knowledge/src/: crates_io.rs  lib.rs
llm-codebase-to-prompt/: Cargo.toml
llm-codebase-to-prompt/src/: lib.rs  main.rs
llm-docs-to-knowledge/: Cargo.toml
llm-docs-to-knowledge/src/: main.rs
llm-pricing-estimation/: Cargo.toml
llm-pricing-estimation/src/: commands.rs  main.rs  pricing.rs  utils.rs
llm-requirements-estimation/: Cargo.toml
llm-requirements-estimation/src/: main.rs
