[workspace]
members = ["docs-to-knowledge","llm-codebase-to-prompt", "llm-docs-to-knowledge", "llm-pricing-estimation", "llm-requirements-estimation"]
resolver = "2"

# Lints

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
perf = "warn"
style = "warn"
complexity = "warn"
suspicious = "warn"
correctness = "warn"

