[package]
name = "llm-codebase-to-prompt"
version = "0.2.1"
edition = "2021"

[lints]
workspace = true

[dependencies]
clap = {version="4", features = ["derive"]}
glob = "0.3"
notify = "6.1"
ignore = "0.4"
log = { version = "0.4", features = ["std"] }
env_logger = "0"
chrono = "0.4"

[features]
default = ["logging"]
logging = []